# Patterns

./: README.md
Creational/Abstract Factory/C#/: IAutoBodyFactory.cs  IAutoBodyPart.cs  Program.cs  SUVFactory.cs  SUVParts.cs  SedanFactory.cs  SedanParts.cs
Creational/Abstract Factory/C++/: CMakeLists.txt  main.cpp
Creational/Abstract Factory/C++/factory/: IAutoBodyFactory.hpp  SUVFactory.cpp  SUVFactory.hpp  SedanFactory.cpp  SedanFactory.hpp
Creational/Abstract Factory/C++/product/: AutoBodyPart.hpp  SUVParts.cpp  SUVParts.hpp  SedanParts.cpp  SedanParts.hpp
Creational/Abstract Factory/GoLang/: go.mod  main.go
Creational/Abstract Factory/Java/: AbstractFactory.java  CarPartsFactory.java  Door.java  Hood.java  Main.java  ModelXDoor.java  ModelXFactory.java  ModelXHood.java  ModelYDoor.java  ModelYFactory.java  ModelYHood.java
Creational/Abstract Factory/JavaScript/: index.html
Creational/Abstract Factory/Python/: main.py
Creational/Abstract Factory/TypeScript/: package.json  tsconfig.json
Creational/Builder/C#/: BurgerMealBuilder.cs  C#.generated.sln  ChickenMealBuilder.cs  IMealBuilder.cs  Meal.cs  MealDirector.cs  Program.cs
Creational/Builder/GoLang/: burger_meal_builder.go  chicken_meal_builder.go  go.mod  main.go  meal.go  meal_builder.go  meal_director.go
Creational/Builder/JavaScript/: index.html
Creational/Factory Method/C#/: C#.generated.sln  Creator.cs  Document.cs  Program.cs  Report.cs  ReportCreator.cs  Resume.cs  ResumeCreator.cs
Creational/Factory Method/JavaScript/: index.html
Creational/Object Pool/C#/: C#.generated.sln  (+3 more)
(+54 files in other folders)
